# sec-kb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  run.sh
data/seeds/design/: access-control.json  arithmetic.json  cross-chain.json  dependencies.json  economic.json  lazy-settlement.json  state.json  temporal.json  upgrade.json
kb-core/: Cargo.toml
kb-core/src/: curate.rs  fingerprint.rs  lib.rs  query.rs  raw.rs  store.rs  types.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
